# shranbot

./: README.md  main.yml  mypy.ini  pyproject.toml
.github/workflows/: main.yml
scripts/: project_helper.py
src/kickstart/logger/: __init__.py
src/shranbot/: __init__.py  command_line.py  main.py  utils.py
src/shranbot/logger/: pkg_logger.py
src/shranbot/logging/: __init__.py  pkg_logger.py
src/shranbot/services/: bot.py
src/shranbot/services/bot/: __init__.py  commands.py
src/shranbot/services/tickers/: dmgi.py
tests/: conftest.py
tests/unit-test/: test_pkg.py
